--- a/bases/index.html
+++ b/bases/index.html
@@ -7,6 +7,6 @@
     <title>Typescript bases</title>
 </head>
 <body>
-    <script src="types/booleans.js"></script>
+    <script src="types/enum.js"></script>
 </body>
 </html>
