Objects and types

--- a/bases/index.html
+++ b/bases/index.html
@@ -7,6 +7,6 @@
     <title>Typescript bases</title>
 </head>
 <body>
-    <script src="functions/function-type.js"></script>
+    <script src="objects/union-types.js"></script>
 </body>
 </html>
